[package]
name = "example"
version = "0.1.0"
authors = ["lz"]
edition = "2018"

[dependencies]
rustls = "0.17"
futures = "0.3.1"
bytes = "0.4"
env_logger = "0.6.2"
log = "0.4"
#actix-web = { version = "3.0.0-alpha.1", features=["rustls"] }
actix-web = { version = "3.0.0-alpha.1", features=["openssl"] }
actix-rt = "1.0.0"
openssl = "0.10.28"
